--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
         <p>이름: 김나림, 유현정, 정선아</p>
         <p>이메일: geuluteu882@gmail.com</p>
     </footer>
-
+    
+    <script src="script.js"></script>
 </body>
 </html>
 
+<!-- [나림] 배경 이미지 구성 -->
+<!-- [현정] 노래 색션 레이아웃 구성 -->
+<!-- [선아] 링크 정리, 총 -->
